--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:release-gate": "CI=1 jest --runInBand tests/unit/queue/task-queue.test.ts tests/integrations/openclaw/adapter.test.ts tests/integrations/openclaw/integration.test.ts tests/state-persistence.test.ts tests/state-aware-orchestrator.test.ts",
     "test:performance": "ts-node tests/performance/benchmark.ts",
     "test:perf:baseline": "ts-node tests/performance/benchmark.ts --scenario baseline",
     "test:perf:standard": "ts-node tests/performance/benchmark.ts --scenario standard",
     "test:perf:full": "ts-node tests/performance/benchmark.ts --scenario full",
-    "test:integration": "jest tests/integration/scenarios --testTimeout=120000 --runInBand",
+    "test:integration": "ts-node scripts/run-live-integration.ts",
+    "test:integration:live": "ts-node scripts/run-live-integration.ts",
     "test:integration:watch": "jest tests/integration/scenarios --testTimeout=120000 --watch",
     "test:integration:coverage": "jest tests/integration/scenarios --testTimeout=120000 --coverage --runInBand",
     "test:integration:db": "jest --testPathPattern='database'",
@@ -46,6 +48,7 @@
     "lint": "eslint src/ --ext .ts",
     "lint:fix": "eslint src/ --ext .ts --fix",
     "typecheck": "tsc --noEmit",
+    "verify:release": "npm run typecheck && npm run build && npm run test:release-gate",
     "quality": "npm run lint && npm run typecheck && npm test",
     "migrate": "ts-node scripts/migrate.ts",
     "migrate:status": "ts-node scripts/migrate.ts status",
