--- a/config/dash.production.yaml
+++ b/config/dash.production.yaml
@@ -70,9 +70,17 @@ budget:
 
 openclaw:
   gatewayUrl: ${OPENCLAW_GATEWAY_URL:-ws://127.0.0.1:18789}
+  # OPENCLAW_GATEWAY_URLS may be a comma-separated list for gateway pooling
+  gatewayUrls: ${OPENCLAW_GATEWAY_URLS}
   gatewayToken: ${OPENCLAW_GATEWAY_TOKEN}  # REQUIRED: Set via environment variable
   mode: restricted
   sandboxMode: docker
+  maxConcurrentSessions: ${OPENCLAW_MAX_CONCURRENT_SESSIONS:-50}
+  perGatewayMaxConcurrentSessions: ${OPENCLAW_PER_GATEWAY_MAX_CONCURRENT_SESSIONS:-25}
+  autoStartGateway: ${OPENCLAW_AUTO_START_GATEWAY:-false}
+  gatewayStartCommand: ${OPENCLAW_GATEWAY_START_COMMAND}
+  gatewayStartupTimeoutMs: ${OPENCLAW_GATEWAY_STARTUP_TIMEOUT_MS:-30000}
+  gatewayStartupProbeIntervalMs: ${OPENCLAW_GATEWAY_STARTUP_PROBE_INTERVAL_MS:-1000}
   mockMode: false
   verbose: false
 
