--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "test:perf:baseline": "ts-node tests/performance/benchmark.ts --scenario baseline",
     "test:perf:standard": "ts-node tests/performance/benchmark.ts --scenario standard",
     "test:perf:full": "ts-node tests/performance/benchmark.ts --scenario full",
+    "test:load": "ts-node tests/load/run.ts",
+    "test:load:10": "ts-node tests/load/run.ts --scale 10",
+    "test:load:25": "ts-node tests/load/run.ts --scale 25",
+    "test:load:50": "ts-node tests/load/run.ts --scale 50",
+    "test:load:all": "ts-node tests/load/run.ts --all",
     "test:integration": "ts-node scripts/run-live-integration.ts",
     "test:integration:live": "ts-node scripts/run-live-integration.ts",
     "test:integration:watch": "jest tests/integration/scenarios --testTimeout=120000 --watch",
@@ -97,6 +102,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/helmet": "^4.0.0",
+    "@types/react": "^19.2.13",
     "@types/ws": "^8.18.1",
     "async-mutex": "^0.5.0",
     "bcrypt": "^6.0.0",
@@ -109,6 +115,9 @@
     "fastify": "^5.7.4",
     "fastify-plugin": "^5.1.0",
     "glob": "^10.3.0",
+    "ink": "^6.6.0",
+    "ink-spinner": "^5.0.0",
+    "ink-text-input": "^6.0.0",
     "ioredis": "^5.9.2",
     "jiti": "^2.6.1",
     "opossum": "^5.0.1",
@@ -116,7 +125,9 @@
     "pg-pool": "^3.7.0",
     "prom-client": "^15.1.3",
     "rate-limiter-flexible": "^9.1.0",
+    "react": "^19.2.4",
     "redis": "^5.10.0",
+    "uuid": "^13.0.0",
     "ws": "^8.19.0",
     "yaml": "^2.5.0",
     "zod": "^3.25.76",
