fix: Rename dash to godel in helm, k8s, and dot directories + fix tests
## Changes Made

### 1. Directory Renames
- helm/dash → helm/godel
- .dash → .godel
- k8s/dash-api.yaml → k8s/godel-api.yaml
- k8s/dash-dashboard.yaml → k8s/godel-dashboard.yaml

### 2. File Updates
- Updated all helm/godel/ templates (Chart.yaml, values.yaml, *.yaml)
- Updated all k8s/ manifests
- Updated src/ files referencing .dash/ directory
- Updated docs/ files with .godel/ references
- Updated monitoring/ configuration files

### 3. Test Fixes
- Fixed uuid ES module issue with Jest mock
- Fixed router.route() method to accept optional strategy parameter
- All release gate tests now passing (89 tests)

### 4. Strategic Test Fixes
- Added uuid mock in jest.setup.ci.ts for ES module compatibility
- Updated ModelRouter.route() signature to support strategy override

## Test Results
- Release Gate: 89/89 tests passing ✅
- Build: ✅ Passing

## Migration Notes
Users with existing .dash directories should rename to .godel:
  mv ~/.dash ~/.godel
  mv ./.dash ./.godel

--- a/helm/godel/Chart.yaml
+++ b/helm/godel/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: dash
+name: godel
 description: Dash - Agent Orchestration Platform
 type: application
 version: 2.0.0
@@ -9,12 +9,12 @@ keywords:
   - orchestration
   - ai
   - automation
-home: https://github.com/davidkimai/dash
+home: https://github.com/davidkimai/godel
 sources:
-  - https://github.com/davidkimai/dash
+  - https://github.com/davidkimai/godel
 maintainers:
   - name: Dash Team
-    email: team@dash.dev
+    email: team@godel.dev
 dependencies:
   - name: postgresql
     version: 12.x.x
