--- a/helm/godel/templates/secrets.yaml
+++ b/helm/godel/templates/secrets.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "dash.fullname" . }}-secrets
+  name: {{ include "godel.fullname" . }}-secrets
   labels:
-    {{- include "dash.labels" . | nindent 4 }}
+    {{- include "godel.labels" . | nindent 4 }}
 type: Opaque
 data:
   API_SECRET_KEY: {{ .Values.secrets.apiSecretKey | b64enc | quote }}
