--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: dash-secrets
-  namespace: dash
+  name: godel-secrets
+  namespace: godel
   labels:
-    app.kubernetes.io/name: dash
+    app.kubernetes.io/name: godel
     app.kubernetes.io/component: secrets
 type: Opaque
 stringData:
   # Database credentials - CHANGE THESE IN PRODUCTION
-  DATABASE_URL: "postgresql://dash_user:REPLACE_WITH_SECURE_PASSWORD@postgres:5432/dash"
+  DATABASE_URL: "postgresql://godel_user:REPLACE_WITH_SECURE_PASSWORD@postgres:5432/godel"
   DATABASE_PASSWORD: "REPLACE_WITH_SECURE_PASSWORD"
   
   # Redis password (if enabled)
@@ -33,10 +33,10 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: dash-tls
-  namespace: dash
+  name: godel-tls
+  namespace: godel
   labels:
-    app.kubernetes.io/name: dash
+    app.kubernetes.io/name: godel
     app.kubernetes.io/component: tls
 type: kubernetes.io/tls
 data:
