--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: dash-config
-  namespace: dash
+  name: godel-config
+  namespace: godel
   labels:
-    app.kubernetes.io/name: dash
+    app.kubernetes.io/name: godel
     app.kubernetes.io/component: config
 data:
   # Application settings
@@ -19,7 +19,7 @@ data:
   # Database
   DATABASE_HOST: "postgres"
   DATABASE_PORT: "5432"
-  DATABASE_NAME: "dash"
+  DATABASE_NAME: "godel"
   DATABASE_POOL_SIZE: "20"
   
   # Redis
@@ -29,7 +29,7 @@ data:
   REDIS_RETRY_MAX_RETRIES: "10"
   
   # Queue settings
-  QUEUE_PREFIX: "dash:queue"
+  QUEUE_PREFIX: "godel:queue"
   QUEUE_BATCH_SIZE: "10"
   QUEUE_POLL_INTERVAL_MS: "100"
   
@@ -66,10 +66,10 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: dash-dashboard-config
-  namespace: dash
+  name: godel-godelboard-config
+  namespace: godel
   labels:
-    app.kubernetes.io/name: dash-dashboard
+    app.kubernetes.io/name: godel-godelboard
     app.kubernetes.io/component: config
 data:
   DASHBOARD_TITLE: "Dash Operations Center"
