--- a/k8s/godel-api.yaml
+++ b/k8s/godel-api.yaml
@@ -1,12 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dash-api
-  namespace: dash
+  name: godel-api
+  namespace: godel
   labels:
-    app.kubernetes.io/name: dash-api
+    app.kubernetes.io/name: godel-api
     app.kubernetes.io/component: api
-    app.kubernetes.io/part-of: dash-platform
+    app.kubernetes.io/part-of: godel-platform
 spec:
   replicas: 3
   strategy:
@@ -16,11 +16,11 @@ spec:
       maxUnavailable: 0
   selector:
     matchLabels:
-      app.kubernetes.io/name: dash-api
+      app.kubernetes.io/name: godel-api
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: dash-api
+        app.kubernetes.io/name: godel-api
         app.kubernetes.io/component: api
       annotations:
         prometheus.io/scrape: "true"
@@ -28,8 +28,8 @@ spec:
         prometheus.io/path: "/metrics"
     spec:
       containers:
-        - name: dash-api
-          image: dash/dash-api:latest
+        - name: godel-api
+          image: godel/godel-api:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3001
@@ -38,9 +38,9 @@ spec:
               name: metrics
           envFrom:
             - configMapRef:
-                name: dash-config
+                name: godel-config
             - secretRef:
-                name: dash-secrets
+                name: godel-secrets
           env:
             - name: POD_NAME
               valueFrom:
@@ -85,14 +85,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: dash-api
-  namespace: dash
+  name: godel-api
+  namespace: godel
   labels:
-    app.kubernetes.io/name: dash-api
+    app.kubernetes.io/name: godel-api
     app.kubernetes.io/component: api
 spec:
   selector:
-    app.kubernetes.io/name: dash-api
+    app.kubernetes.io/name: godel-api
   ports:
     - port: 3001
       targetPort: 3001
