--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -2,11 +2,11 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: redis
-  namespace: dash
+  namespace: godel
   labels:
     app.kubernetes.io/name: redis
     app.kubernetes.io/component: cache
-    app.kubernetes.io/part-of: dash-platform
+    app.kubernetes.io/part-of: godel-platform
 spec:
   serviceName: redis
   replicas: 1
@@ -76,7 +76,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis
-  namespace: dash
+  namespace: godel
   labels:
     app.kubernetes.io/name: redis
     app.kubernetes.io/component: cache
