feat: Strategic Directions A-D - Visual, Multi-Region, Autonomic, Intent-Based
## Track A: Cerebral Cortex (Visual Observability)
- React dashboard with real-time WebSocket updates
- SessionTree: D3.js hierarchical visualization
- AgentGrid: Real-time federation health
- MetricsCharts: 5 Recharts visualizations
- EventStream: Live event feed with filtering
- WorkflowGraph: React Flow DAG visualization
- AlertPanel: Active alert management
- 36 React/TS files, dark mode UI

## Track B: Multi-Region Federation (Infinite Scale)
- ClusterRegistry: Multi-cluster management
- ClusterClient: gRPC for remote operations
- MultiClusterLoadBalancer: Latency/cost/GPU routing
- TransparentProxy: Unified agent interface
- Agent migration between clusters
- CLI: swarmctl cluster [list|add|migrate|health]

## Track C: Godel-on-Godel (Recursive Maintenance)
- ErrorListenerService: Real-time error monitoring
- TestWriterAgent: LLM reproduction test generation
- PatchAgent: Code fix generation with verification
- PRAgent: Automatic GitHub PR submission
- Orchestrator: Coordinates maintenance pipeline
- Auto-fixable: TypeError, ReferenceError, SyntaxError
- CLI: swarmctl autonomic [start|status|fix]

## Track D: Intent-Based Magic
- IntentParser: LLM-based natural language parsing
- ComplexityAnalyzer: Code metrics (LOC, cyclomatic, cognitive)
- SwarmConfigGenerator: Automatic agent selection
- IntentExecutor: End-to-end execution
- CLI: godel do <intent> [--budget|--watch|--yes]
- Cost/time estimation, budget enforcement

## Stats
- Total new files: 65
- Total lines: ~9,800
- Tests added: 93
- All 4 strategic directions complete

--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.5",
+    "@grpc/grpc-js": "^1.14.3",
+    "@grpc/proto-loader": "^0.8.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/context-async-hooks": "^2.5.0",
     "@opentelemetry/core": "^2.5.0",
@@ -108,6 +110,7 @@
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.6.2",
     "blessed": "^0.1.81",
+    "chalk": "^4.1.2",
     "commander": "^12.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
