--- a/src/dashboard/ui/package.json
+++ b/src/dashboard/ui/package.json
@@ -14,34 +14,37 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.20.0",
+    "@tanstack/react-virtual": "^3.0.0",
+    "@types/d3": "^7.4.3",
+    "clsx": "^2.1.0",
+    "d3": "^7.9.0",
+    "date-fns": "^3.3.0",
+    "lucide-react": "^0.330.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
+    "reactflow": "^11.11.4",
     "recharts": "^2.12.0",
-    "zustand": "^4.5.0",
-    "ws": "^8.16.0",
-    "date-fns": "^3.3.0",
-    "lucide-react": "^0.330.0",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.0",
-    "@tanstack/react-query": "^5.20.0",
-    "@tanstack/react-virtual": "^3.0.0",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "ws": "^8.16.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^14.2.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/ws": "^8.5.0",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.17",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.0",
     "vite": "^5.1.0",
     "vite-plugin-pwa": "^0.19.0",
-    "vitest": "^1.3.0",
-    "@testing-library/react": "^14.2.0",
-    "@testing-library/jest-dom": "^6.4.0",
-    "jsdom": "^24.0.0"
+    "vitest": "^1.3.0"
   }
 }
