fix(ai): rename package from @dash/ai to @godel/ai and fix circular dependency
- Rename package to @godel/ai for consistency with project namespace
- Fix circular dependency in index.ts by moving SwarmModelResolver export after imports
- Update tsconfig.json to exclude test files from build
- Add test-handler.ts to replace deleted test.ts handler

Fixes CLI runtime errors caused by missing @godel/ai dependency

--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dash/ai",
+  "name": "@godel/ai",
   "version": "1.0.0",
-  "description": "Dash unified LLM API with provider failover",
+  "description": "Godel unified LLM API with provider failover",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
