fix(build): copy protobuf files to dist directory
- Add copy:proto script to package.json
- Update build script to run copy:proto after tsc
- Fixes CLI crash caused by missing federation.proto in dist/
- Enables production runtime to load gRPC protobuf definitions

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "swarmctl": "./dist/src/cli/index.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run copy:proto",
+    "copy:proto": "cp -r src/federation/proto dist/src/federation/ && cp -r src/federation/cluster/proto dist/src/federation/cluster/",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:release-gate": "CI=1 jest --runInBand tests/unit/queue/task-queue.test.ts tests/integrations/openclaw/adapter.test.ts tests/integrations/openclaw/integration.test.ts tests/state-persistence.test.ts tests/state-aware-orchestrator.test.ts",
