chore(security): enforce repo workdir and standardize worktree ops

--- a/package.json
+++ b/package.json
@@ -31,59 +31,63 @@
     "swarmctl": "./dist/src/cli/index.js"
   },
   "scripts": {
-    "build": "tsc && npm run copy:proto",
+    "preflight:cwd": "node scripts/ensure-project-root.js",
+    "build": "npm run preflight:cwd && tsc && npm run copy:proto",
     "copy:proto": "cp -r src/federation/proto dist/src/federation/ && cp -r src/federation/cluster/proto dist/src/federation/cluster/",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:release-gate": "CI=1 jest --runInBand tests/unit/queue/task-queue.test.ts tests/integrations/openclaw/adapter.test.ts tests/integrations/openclaw/integration.test.ts tests/state-persistence.test.ts tests/state-aware-orchestrator.test.ts",
-    "test:performance": "ts-node tests/performance/benchmark.ts",
-    "benchmark:boot-time": "ts-node tests/benchmarks/boot-time.bench.ts",
-    "benchmark:oolong": "tsx benchmarks/oolong/index.ts",
-    "test:perf:baseline": "ts-node tests/performance/benchmark.ts --scenario baseline",
-    "test:perf:standard": "ts-node tests/performance/benchmark.ts --scenario standard",
-    "test:perf:full": "ts-node tests/performance/benchmark.ts --scenario full",
-    "test:load": "ts-node tests/load/run.ts",
-    "test:load:10": "ts-node tests/load/run.ts --scale 10",
-    "test:load:25": "ts-node tests/load/run.ts --scale 25",
-    "test:load:50": "ts-node tests/load/run.ts --scale 50",
-    "test:load:all": "ts-node tests/load/run.ts --all",
-    "test:integration": "ts-node scripts/run-live-integration.ts",
-    "test:integration:live": "ts-node scripts/run-live-integration.ts",
-    "test:integration:watch": "jest tests/integration/scenarios --testTimeout=120000 --watch",
-    "test:integration:coverage": "jest tests/integration/scenarios --testTimeout=120000 --coverage --runInBand",
-    "test:integration:db": "jest --testPathPattern='database'",
-    "dev": "ts-node src/index.ts",
-    "lint": "eslint src/ --ext .ts",
-    "lint:fix": "eslint src/ --ext .ts --fix",
-    "typecheck": "tsc --noEmit",
-    "verify:release": "npm run typecheck && npm run build && npm run test:release-gate",
-    "quality": "npm run lint && npm run typecheck && npm test",
-    "migrate": "ts-node scripts/migrate.ts",
-    "migrate:status": "ts-node scripts/migrate.ts status",
-    "migrate:create": "ts-node scripts/migrate.ts create",
-    "migrate:rollback": "ts-node scripts/migrate.ts rollback",
-    "db:migrate": "./scripts/migrations/migrate-db.sh",
-    "db:validate": "./scripts/migrations/validate-config.sh",
-    "db:up": "docker-compose up -d postgres redis",
-    "db:down": "docker-compose down",
-    "db:logs": "docker-compose logs -f postgres redis",
-    "config:validate": "./scripts/migrations/validate-config.sh",
-    "logs": "ts-node scripts/logs.ts",
-    "logs:query": "ts-node scripts/logs.ts query",
-    "logs:tail": "ts-node scripts/logs.ts tail",
-    "logs:stats": "ts-node scripts/logs.ts stats",
-    "logs:agents": "ts-node scripts/logs.ts agents",
-    "monitoring:up": "docker-compose -f monitoring/docker-compose.yml up -d",
-    "monitoring:down": "docker-compose -f monitoring/docker-compose.yml down",
-    "monitoring:logs": "docker-compose -f monitoring/docker-compose.yml logs -f",
-    "monitoring:status": "docker-compose -f monitoring/docker-compose.yml ps",
-    "loki:ready": "curl -s http://localhost:3100/ready",
-    "grafana:open": "open http://localhost:3000",
-    "cli:build": "tsc src/cli/index.ts --outDir dist/cli --esModuleInterop --target ES2020 --module commonjs --moduleResolution node",
-    "cli:dev": "ts-node src/cli/index.ts",
-    "cli:install": "npm run build && npm link",
-    "swarmctl": "node dist/cli/index.js",
-    "security:scan": "node scripts/security-scan.js"
+    "test": "npm run preflight:cwd && jest",
+    "test:watch": "npm run preflight:cwd && jest --watch",
+    "test:release-gate": "npm run preflight:cwd && CI=1 jest --runInBand tests/unit/queue/task-queue.test.ts tests/integrations/openclaw/adapter.test.ts tests/integrations/openclaw/integration.test.ts tests/state-persistence.test.ts tests/state-aware-orchestrator.test.ts",
+    "test:performance": "npm run preflight:cwd && ts-node tests/performance/benchmark.ts",
+    "benchmark:boot-time": "npm run preflight:cwd && ts-node tests/benchmarks/boot-time.bench.ts",
+    "benchmark:oolong": "npm run preflight:cwd && tsx benchmarks/oolong/index.ts",
+    "test:perf:baseline": "npm run preflight:cwd && ts-node tests/performance/benchmark.ts --scenario baseline",
+    "test:perf:standard": "npm run preflight:cwd && ts-node tests/performance/benchmark.ts --scenario standard",
+    "test:perf:full": "npm run preflight:cwd && ts-node tests/performance/benchmark.ts --scenario full",
+    "test:load": "npm run preflight:cwd && ts-node tests/load/run.ts",
+    "test:load:10": "npm run preflight:cwd && ts-node tests/load/run.ts --scale 10",
+    "test:load:25": "npm run preflight:cwd && ts-node tests/load/run.ts --scale 25",
+    "test:load:50": "npm run preflight:cwd && ts-node tests/load/run.ts --scale 50",
+    "test:load:all": "npm run preflight:cwd && ts-node tests/load/run.ts --all",
+    "test:integration": "npm run preflight:cwd && ts-node scripts/run-live-integration.ts",
+    "test:integration:live": "npm run preflight:cwd && ts-node scripts/run-live-integration.ts",
+    "test:integration:watch": "npm run preflight:cwd && jest tests/integration/scenarios --testTimeout=120000 --watch",
+    "test:integration:coverage": "npm run preflight:cwd && jest tests/integration/scenarios --testTimeout=120000 --coverage --runInBand",
+    "test:integration:db": "npm run preflight:cwd && jest --testPathPattern='database'",
+    "dev": "npm run preflight:cwd && ts-node src/index.ts",
+    "lint": "npm run preflight:cwd && eslint src/ --ext .ts",
+    "lint:fix": "npm run preflight:cwd && eslint src/ --ext .ts --fix",
+    "typecheck": "npm run preflight:cwd && tsc --noEmit",
+    "verify:release": "npm run preflight:cwd && npm run typecheck && npm run build && npm run test:release-gate",
+    "quality": "npm run preflight:cwd && npm run lint && npm run typecheck && npm test",
+    "migrate": "npm run preflight:cwd && ts-node scripts/migrate.ts",
+    "migrate:status": "npm run preflight:cwd && ts-node scripts/migrate.ts status",
+    "migrate:create": "npm run preflight:cwd && ts-node scripts/migrate.ts create",
+    "migrate:rollback": "npm run preflight:cwd && ts-node scripts/migrate.ts rollback",
+    "db:migrate": "npm run preflight:cwd && ./scripts/migrations/migrate-db.sh",
+    "db:validate": "npm run preflight:cwd && ./scripts/migrations/validate-config.sh",
+    "db:up": "npm run preflight:cwd && docker-compose up -d postgres redis",
+    "db:down": "npm run preflight:cwd && docker-compose down",
+    "db:logs": "npm run preflight:cwd && docker-compose logs -f postgres redis",
+    "config:validate": "npm run preflight:cwd && ./scripts/migrations/validate-config.sh",
+    "logs": "npm run preflight:cwd && ts-node scripts/logs.ts",
+    "logs:query": "npm run preflight:cwd && ts-node scripts/logs.ts query",
+    "logs:tail": "npm run preflight:cwd && ts-node scripts/logs.ts tail",
+    "logs:stats": "npm run preflight:cwd && ts-node scripts/logs.ts stats",
+    "logs:agents": "npm run preflight:cwd && ts-node scripts/logs.ts agents",
+    "monitoring:up": "npm run preflight:cwd && docker-compose -f monitoring/docker-compose.yml up -d",
+    "monitoring:down": "npm run preflight:cwd && docker-compose -f monitoring/docker-compose.yml down",
+    "monitoring:logs": "npm run preflight:cwd && docker-compose -f monitoring/docker-compose.yml logs -f",
+    "monitoring:status": "npm run preflight:cwd && docker-compose -f monitoring/docker-compose.yml ps",
+    "loki:ready": "npm run preflight:cwd && curl -s http://localhost:3100/ready",
+    "grafana:open": "npm run preflight:cwd && open http://localhost:3000",
+    "cli:build": "npm run preflight:cwd && tsc src/cli/index.ts --outDir dist/cli --esModuleInterop --target ES2020 --module commonjs --moduleResolution node",
+    "cli:dev": "npm run preflight:cwd && ts-node src/cli/index.ts",
+    "cli:install": "npm run preflight:cwd && npm run build && npm link",
+    "swarmctl": "npm run preflight:cwd && node dist/cli/index.js",
+    "security:scan": "npm run preflight:cwd && node scripts/security-scan.js",
+    "guard:install-hook": "npm run preflight:cwd && ./scripts/install-home-repo-block-hook.sh",
+    "worktree:list": "npm run preflight:cwd && ./scripts/worktree-manager.sh list",
+    "worktree:prune": "npm run preflight:cwd && ./scripts/worktree-manager.sh prune"
   },
   "dependencies": {
     "@fastify/cors": "^11.2.0",
